--- a/plugins/agiledashboard/www/themes/BurningParrot/css/includes/_kanban-item.scss
+++ b/plugins/agiledashboard/www/themes/BurningParrot/css/includes/_kanban-item.scss
@@ -55,29 +55,6 @@ $transition-delay: 350ms;
         background-color: $tlp-swatch-flamingo-pink;
     }
 
-    $border-radius-size: 3px;
-
-    &.gu-transit {
-        background: #58B359;
-        border-radius: $border-radius-size;
-        height: 4px;
-        margin: 10px;
-        opacity: 1;
-
-        > kanban-item {
-            display: none;
-        }
-    }
-
-    &.gu-mirror {
-        opacity: 1;
-
-        > kanban-item {
-            box-shadow: 0 7px 30px rgba(0, 0, 0, 0.2);
-            border: none;
-        }
-    }
-
     &.updating {
         > kanban-item {
             background-image: url('loader-mini.gif');
@@ -92,7 +69,7 @@ $transition-delay: 350ms;
 
     > kanban-item {
         background: #FFFFFF;
-        border-radius: $border-radius-size;
+        border-radius: 3px;
         border: 1px solid #E8E8E8;
         box-shadow: 0px 1px 0px 0px rgba(242, 242, 242, 0.7);
         color: #333;
@@ -309,4 +286,48 @@ $transition-delay: 350ms;
 
 #kanban-board > div.wip-reached ul.kanban-items > li {
     border: 1px solid #F5D5AB;
+}
+
+.kanban-item {
+    &.gu-transit {
+        height: 3px;
+        margin: $tlp-spacing 10px;
+        opacity: 1;
+        border-radius: 3px;
+        background: $tlp-theme-color;
+
+        > kanban-item {
+            display: none;
+        }
+    }
+
+    &.gu-mirror {
+        opacity: 1;
+
+        > kanban-item {
+            border: 0;
+            box-shadow: 0 7px 30px rgba(0, 0, 0, .2);
+        }
+    }
+}
+
+.kanban-column {
+    &.kanban-column-closed .kanban-item.gu-transit {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        border-radius: 0;
+        background: transparentize($tlp-theme-color, .9);
+    }
+
+    &.wip-reached .kanban-item.gu-transit {
+        background: $tlp-ui-warning;
+    }
+
+    &.wip-reached.kanban-column-closed .kanban-item.gu-transit {
+        background: transparentize($tlp-ui-warning, .9);
+    }
 }
